webapp/src/client/styles/Navbar.module.scss
@use "colors";

.container {
    display: flex;
    justify-content: space-between;

    height: 48px;
    border-bottom: 1px solid colors.$gray3;
    padding-right: 12px;
}

.leftNav {
    display: flex;
    align-items: center;
}

.leftNav > div {
    margin-left: 20px;
}

.rightNav {
    display: flex;
    align-items: center;
}

.divider {
    border-left: 1px solid #E7E3EC;
    height: 30px;
}

.menu {
    border-bottom: none;
}

.avatarContainer {
    margin-left: 30px;
    box-sizing: border-box;
    border: 1px solid transparent;
    border-radius: 50%;
    padding: 1px;
}

$hoverColor: colors.$purple5;

.avatarContainer:hover {
    border: 1px solid $hoverColor;
}

.documentation {
    text-decoration: none;
    color: inherit;
}

.activeTier:hover {
    color: $hoverColor;
}

.logo {
    color: #111013;
}

.logo:hover {
    color: $hoverColor;
}

